<resources>
    <string name="app_name" translatable="false">Ephemeral Contacts</string>


    <string name="contact_list_title" translatable="false">Ephemeral Contacts</string>
    <string name="tag_contacts" translatable="false">EC-</string>
    <string name="separador_contacts" translatable="false">-</string>

    <string name="menu_borrar">Borrar</string>
    <string name="menu_aniade">Añadir</string>


    <string name="menu_seleccionado">seleccionado</string>
    <string name="menu_seleccionados">seleccionados</string>

    <string name="toast_guardado">Guardado correctamente</string>
    <string name="toast_error_guardado">Error, los cambios no se han podido guardar</string>
    <string name="toast_permission_denied">Ephemeral Contacts necesita acceso a los contactos para poder funcionar correctamente</string>
    <string name="toast_caducado">Hay contactos que acaban de caducar</string>

    <string name="spinner_tag1">Todos</string>

    <string name="menu_save">Guardar</string>
    <string name="menu_volver">Volver sin guardar</string>
    <string name="menu_volver_normal">Volver</string>
    <string name="menu_edit">Editar</string>


    <string name="view_number">Número de teléfono</string>
    <string name="view_name">Nombre</string>
    <string name="view_tag" translatable="false">#TAG</string>
    <string name="view_expiration">Caducidad en día(s):</string>
    <string name="view_expiration_fecha">Fecha de caducidad:</string>

    <string name="error_guardar">¡Tienes que rellenar todos los campos!</string>
    <string name="borrado">Contacto borrado</string>
    <string name="borrado_error">Error, no se ha podido borrar</string>
</resources>
