<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:id="@+id/ConcernedPortionofScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/call"
                android:src="@drawable/call"
                app:elevation="3dp"
                app:borderWidth="0dp"
                android:backgroundTint="@color/colorAccent"
                app:fabSize="normal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="3dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:background="@color/colorPrimaryLight">


                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    android:backgroundTint="@color/cardview_light_background"
                    android:id="@+id/card_contact"
                    android:layout_margin="30dp"

                    >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:maxLength="15"
                    android:hint="@string/view_tag"
                    android:padding="10dp"
                    android:textColor="@color/cardview_dark_background"
                    android:id="@+id/tag"
                    android:inputType="textCapSentences"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                   android:enabled="false" />

                </android.support.v7.widget.CardView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:gravity="center"
                    android:textSize="40dp"
                    android:maxLength="18"
                    android:hint="@string/view_name"
                    android:textColorHint="@color/colorWhite"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/name"
                    android:maxLines="1"
                    android:inputType="textCapSentences"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:enabled="false" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:textSize="20dp"
                    android:text="@string/view_expiration"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorGrey"
                    android:id="@+id/expirationtext"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginTop="56dp"
                    android:enabled="true"
                    android:layout_alignTop="@+id/name"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:textSize="20dp"
                    android:maxLength="2"
                    android:text="3"
                    android:textColor="@color/colorGrey"
                    android:id="@+id/expiration"
                    android:inputType="datetime"
                    android:gravity="center"

                    android:layout_weight="1"
                    android:enabled="false"
                    android:layout_below="@+id/expirationtext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RestofScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="1"
            android:gravity="center"
            android:maxLength="15"
            android:textSize="30dp"
            android:hint="@string/view_number"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/cardview_dark_background"
            android:id="@+id/phone"
            android:enabled="false"
        />


    </LinearLayout>

</LinearLayout>
